--- a/about.html
+++ b/about.html
@@ -8,18 +8,90 @@
   <title>业务</title>
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/about.css">
+  <script src="js/jquery-2.1.1.min.js"></script>
 </head>
 
 <body>
+  <div class="nav-top">
+    <div class="nav-top-nav">
+      <div class="fl">
+        <img src="images/logo.png" alt="">
+      </div>
+    </div>
+    <div class="nav-top-left">
+
+    </div>
+    <div class="nav-top-right">
+
+    </div>
+    <div class="nav-top-list">
+      <ul>
+        <li>
+          <a href="index.html">
+            <img src="images/home.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="business.html">
+            <img src="images/business.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <img src="images/contact.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="recruit.html">
+            <img src="images/recruit.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <img src="images/about.png" alt="">
+          </a>
+        </li>
+      </ul>
+      <div class="nav-our">
+        <ul>
+          <li>
+            <a href="">
+              <img src="images/w1.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w2.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w3.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w4.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w5.png" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="nav" style="background: #fff">
     <div class="active">
       <div class="fl nav-active">
         <img src="images/logo2.png" alt="">
       </div>
-      <div class="fr nav-active">
-        <span>
-          <img src="images/nav-2.png" alt="">
-        </span>
+      <div class="nav-line fr">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </div>
   </div>
@@ -46,10 +118,10 @@
     </div>
     <div class="advantage-right">
       <ul>
-        <li>拥有底层数据获取特权，结合大数据技术、算法、 模型，实现智能营销；</li>
-        <li>熟知主流及前沿企业、传统企业及品牌的需求解决方案；</li>
-        <li>与品牌深度互动，协助品牌做全维度的信息沟通；</li>
-        <li>模块化服务无缝配合，增加客户效能附加值。</li>
+        <li class="liOne">拥有底层数据获取特权，结合大数据技术、算法、 模型，实现智能营销；</li>
+        <li class="liTwo">熟知主流及前沿企业、传统企业及品牌的需求解决方案；</li>
+        <li class="liThree">与品牌深度互动，协助品牌做全维度的信息沟通；</li>
+        <li class="liFour">模块化服务无缝配合，增加客户效能附加值。</li>
       </ul>
     </div>
     <div class="clear he80"></div>
@@ -62,7 +134,7 @@
     </div>
     <div class="grow-list listOne">
       <div class="grow-item">
-        <div class="grow-name">建立自己的大数据平台</div> 
+        <div class="grow-name">建立自己的大数据平台</div>
         <div class="about-line"></div>
         <p>2016</p>
       </div>
@@ -144,5 +216,27 @@
     </div>
   </div>
 </body>
+<script>
+  $(window).scroll(function () {
+    if ($(window).scrollTop() + $(window).height() > $(".about-advantage").offset().top) {
+      $(".about-advantage").addClass("animated");
+    }
+    if ($(window).scrollTop() + $(window).height() > $(".grow").offset().top) {
+      $(".grow").addClass("animated");
+    }
+    // if ($(window).scrollTop() + $(window).height() > $(".welfare").offset().top) {
+    //   $(".welfare ul").addClass("animated");
+    // }
+    // if ($(window).scrollTop() + $(window).height() > $(".recruit-list").offset().top) {
+    //   $(".recruit-list").addClass("animatedDiv");
+    // }
+  })
+  $(".nav-line").click(function() {
+    $(".nav-top").css("top","0")
+  })
+  $(".nav-top").click(function() {
+    $(".nav-top").css("top","-100%")
+  })
+</script>
 
 </html>
