--- a/index.html
+++ b/index.html
@@ -24,6 +24,77 @@
     <path class="path-borders" d="M 5000 2500 m -919 0 a 919 919 0 1 0 1838 0 a 919 919 0 1 0 -1838 0" />
     <path class="path-borders" d="M 5000 2500 m -1068 0 a 1068 1068 0 1 0 2136 0 a 1068 1068 0 1 0 -2136 0" />
   </svg> -->
+  <div class="nav-top">
+    <div class="nav-top-nav">
+      <div class="fl">
+        <img src="images/logo.png" alt="">
+      </div>
+    </div>
+    <div class="nav-top-left">
+
+    </div>
+    <div class="nav-top-right">
+
+    </div>
+    <div class="nav-top-list">
+      <ul>
+        <li>
+          <a href="index.html">
+            <img src="images/home.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="business.html">
+            <img src="images/business.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <img src="images/contact.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="recruit.html">
+            <img src="images/recruit.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <img src="images/about.png" alt="">
+          </a>
+        </li>
+      </ul>
+      <div class="nav-our">
+        <ul>
+          <li>
+            <a href="">
+              <img src="images/w1.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w2.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w3.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w4.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w5.png" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="nav">
     <div class="nav-list">
       <div class="fl nav-on">
@@ -174,6 +245,99 @@
             <p>
               基于大数据，融合云治理，以创新数字营销为工具，提供数字化生态综合服务，本着专业、专心的职业操守，我们已经成功的帮助多家企业节约成本，转变效能，实现效益增值。
             </p>
+            <a class="btn" href="business.html">
+              更多
+            </a>
+          </div>
+          <div class="plan-img">
+            <img src="images/computer.png" alt="">
+          </div>
+        </div>
+      </section>
+    </div>
+    <div data-slide="5" class="panel">
+      <div id="layer-4" class="trans-layer"></div>
+      <section id="section-4" class="section">
+        <div class="section-content">
+          <div class="plan-left">
+
+          </div>
+          <div class="plan-right">
+
+          </div>
+          <div class="plan-text">
+            <div class="plan-title">
+              战略规划
+            </div>
+            <div class="line">
+
+            </div>
+            <p>
+              基于大数据，融合云治理，以创新数字营销为工具，提供数字化生态综合服务，本着专业、专心的职业操守，我们已经成功的帮助多家企业节约成本，转变效能，实现效益增值。
+            </p>
+            <a class="btn" href="business.html">
+                更多
+              </a>
+          </div>
+          <div class="plan-img">
+            <img src="images/computer.png" alt="">
+          </div>
+        </div>
+      </section>
+    </div>
+    <div data-slide="6" class="panel">
+      <div id="layer-4" class="trans-layer"></div>
+      <section id="section-4" class="section">
+        <div class="section-content">
+          <div class="plan-left">
+
+          </div>
+          <div class="plan-right">
+
+          </div>
+          <div class="plan-text">
+            <div class="plan-title">
+              战略规划
+            </div>
+            <div class="line">
+
+            </div>
+            <p>
+              基于大数据，融合云治理，以创新数字营销为工具，提供数字化生态综合服务，本着专业、专心的职业操守，我们已经成功的帮助多家企业节约成本，转变效能，实现效益增值。
+            </p>
+            <a class="btn" href="business.html">
+                更多
+              </a>
+          </div>
+          <div class="plan-img">
+            <img src="images/computer.png" alt="">
+          </div>
+        </div>
+      </section>
+    </div>
+    <div data-slide="7" class="panel">
+      <div id="layer-4" class="trans-layer"></div>
+      <section id="section-4" class="section">
+        <div class="section-content">
+          <div class="plan-left">
+
+          </div>
+          <div class="plan-right">
+
+          </div>
+          <div class="plan-text">
+            <div class="plan-title">
+              战略规划
+            </div>
+            <div class="line">
+
+            </div>
+            <p>
+              基于大数据，融合云治理，以创新数字营销为工具，提供数字化生态综合服务，本着专业、专心的职业操守，我们已经成功的帮助多家企业节约成本，转变效能，实现效益增值。
+            </p>
+            <a class="btn" href="business.html">
+                更多
+              </a>
           </div>
           <div class="plan-img">
             <img src="images/computer.png" alt="">
@@ -186,5 +350,13 @@
   <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
   <script src="js/index.js"></script>
 </body>
+<script>
+  $(".nav-line").click(function () {
+    $(".nav-top").css("top", "0")
+  })
+  $(".nav-top").click(function () {
+    $(".nav-top").css("top", "-100%")
+  })
+</script>
 
 </html>
