--- a/recruit.html
+++ b/recruit.html
@@ -13,15 +13,86 @@
 </head>
 
 <body>
+  <div class="nav-top">
+    <div class="nav-top-nav">
+      <div class="fl">
+        <img src="images/logo.png" alt="">
+      </div>
+    </div>
+    <div class="nav-top-left">
+
+    </div>
+    <div class="nav-top-right">
+
+    </div>
+    <div class="nav-top-list">
+      <ul>
+        <li>
+          <a href="index.html">
+            <img src="images/home.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="business.html">
+            <img src="images/business.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <img src="images/contact.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="recruit.html">
+            <img src="images/recruit.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="about.html">
+            <img src="images/about.png" alt="">
+          </a>
+        </li>
+      </ul>
+      <div class="nav-our">
+        <ul>
+          <li>
+            <a href="">
+              <img src="images/w1.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w2.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w3.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w4.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/w5.png" alt="">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="nav" style="background: #fff">
     <div class="active">
       <div class="fl nav-active">
         <img src="images/logo2.png" alt="">
       </div>
-      <div class="fr nav-active">
-        <span>
-          <img src="images/nav-2.png" alt="">
-        </span>
+      <div class="nav-line fr">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </div>
   </div>
@@ -31,7 +102,7 @@
   <div class="he80">
 
   </div>
-  <div class="recruit-title center">我们的价值观</div>
+  <div class="recruit-title center title-one">我们的价值观</div>
   <div class="he80"></div>
   <div class="ourslist center">
     <ul>
@@ -39,7 +110,7 @@
         <p class="ourlist-title">为自己工作</p>
         <p>我们认真对待自己的工作，这是一份值得全力以赴的事业。</p>
       </li>
-      <li class="ourlist-tow">
+      <li class="ourlist-two">
         <p class="ourlist-title">内部驱动</p>
         <p>我们不断地把自己推到舒适区外，每天努力去迎接越来越大的挑战。</p>
       </li>
@@ -62,69 +133,147 @@
     </ul>
   </div>
   <div class="he80"></div>
-  <div class="recruit-title center">企业福利</div>
+  <div class="recruit-title center title-two">企业福利</div>
   <div class="he80"></div>
   <div class="welfare center">
     <ul>
-      <li>
+      <li class="welfare-one">
         <img src="images/recruit/list1.png" alt="">
         <p>和最优秀的人一起工作</p>
         <p>我们对每一个员工都进行批判性的思考</p>
         <p>以确保团队的活力</p>
       </li>
-      <li>
+      <li class="welfare-two">
         <img src="images/recruit/list2.png" alt="">
         <p>无论你想去哪里</p>
         <p>我们每年都带你飞到世界上一个新的地方</p>
       </li>
-      <li>
+      <li class="welfare-three">
         <img src="images/recruit/list3.png" alt="">
         <p>无限的PTO</p>
         <p>我们相信你能够出色地完成工作</p>
         <p>并且在你想要的时候休假</p>
       </li>
-      <li>
+      <li class="welfare-four">
         <img src="images/recruit/list4.png" alt="">
         <p>丰厚的薪水，可观的权益，</p>
         <p>以及健康福利</p>
       </li>
-      <li>
+      <li class="welfare-five">
         <img src="images/recruit/list5.png" alt="">
         <p>给你一个自己做老板的机会</p>
       </li>
     </ul>
   </div>
   <div class="he80 clear"></div>
-  <div class="recruit-title center">招聘职位</div>
+  <div class="recruit-title center title-three">招聘职位</div>
   <div class="he80"></div>
   <div class="recruit-list center">
-    <div class="recruit-listLeft">
+    <div class=" recruit-one">
       <p class="recruitList-title">Java研发工程师
-        <span class="fr">
+        <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
+        <span class="fr done" id="done">
+          <img src="images/recruit/done.png" alt="">
+        </span>
       </p>
+      <div class="recruit-text">
+        <h4>岗位职责</h4>
+        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
+        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
+        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
+
+        <h4>任职要求</h4>
+        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
+        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
+        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+      </div>
+
+      <div class="he80"></div>
+      <div class="btn">
+        <button>加入我们</button>
+      </div>
     </div>
-    <div class="recruit-listRight">
-      <p class="recruitList-title">Java研发工程师
-        <span class="fr">
+
+    <div class=" recruit-two">
+      <p class="recruitList-title ">平面设计师
+        <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
+        <span class="fr done">
+          <img src="images/recruit/done.png" alt="">
+        </span>
       </p>
+      <div class="recruit-text">
+        <h4>岗位职责</h4>
+        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
+        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
+        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
+
+        <h4>任职要求</h4>
+        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
+        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
+        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+      </div>
+
+      <div class="he80"></div>
+      <div class="btn">
+        <button>加入我们</button>
+      </div>
     </div>
-    <div class="recruit-listLeft">
-      <p class="recruitList-title">Java研发工程师
-        <span class="fr">
+
+    <div class=" recruit-three">
+      <p class="recruitList-title">数据分析师
+        <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
+        <span class="fr done">
+          <img src="images/recruit/done.png" alt="">
+        </span>
       </p>
+      <div class="recruit-text">
+        <h4>岗位职责</h4>
+        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
+        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
+        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
+
+        <h4>任职要求</h4>
+        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
+        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
+        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+      </div>
+
+      <div class="he80"></div>
+      <div class="btn">
+        <button>加入我们</button>
+      </div>
     </div>
-    <div class="recruit-listRight">
-      <p class="recruitList-title">Java研发工程师
-        <span class="fr">
+    <div class="recruit-four">
+      <p class="recruitList-title ">新媒体运营
+        <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
+        <span class="fr done">
+          <img src="images/recruit/done.png" alt="">
+        </span>
       </p>
+      <div class="recruit-text">
+        <h4>岗位职责</h4>
+        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
+        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
+        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
+
+        <h4>任职要求</h4>
+        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
+        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
+        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+      </div>
+
+      <div class="he80"></div>
+      <div class="btn">
+        <button>加入我们</button>
+      </div>
     </div>
   </div>
   <div class="he80"></div>
@@ -161,5 +310,13 @@
     </div>
   </div>
 </body>
+<script>
+  $(".nav-line").click(function () {
+    $(".nav-top").css("top", "0")
+  })
+  $(".nav-top").click(function () {
+    $(".nav-top").css("top", "-100%")
+  })
+</script>
 
 </html>
