--- a/recruit.html
+++ b/recruit.html
@@ -170,7 +170,7 @@
   <div class="he80"></div>
   <div class="recruit-list center">
     <div class=" recruit-one">
-      <p class="recruitList-title">Java研发工程师
+      <p class="recruitList-title">平面设计师岗位JD
         <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
@@ -180,14 +180,19 @@
       </p>
       <div class="recruit-text">
         <h4>岗位职责</h4>
-        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
-        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
-        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
-
+        <p> 1、参与创意策略的研讨和制定，负责品牌平面设计。</p>
+        <p>2、参与负责包装设计、材质、印刷工作。</p>
+        <p>3、根据公司策划思路和营销概念能独立完成个案，充分理解创意意图并准确体现于创意设计中。</p>
+        <p>4、其他相关设计方面的工作。</p>
         <h4>任职要求</h4>
-        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
-        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
-        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+        <p> 1、本科及以上学历，美术或平面设计相专业毕业（有才华者不受此限）。</p>
+        <p>2、创意性思维强，具有扎实的美术功底及艺术修养，热爱广告设计工作。 能够独立完成项目。 </p>
+        <p>3、优秀的视觉感知表达能力, 熟练使用AI、PS、SKECH等平面设计软件。 </p>
+        <p>4、能按时提交作品，能独立完成整个项目的设计工作。 </p>
+        <p>5、了解印刷品前、后道印刷相关知识。 </p>
+        <p>6、有较强的责任心及沟通协调能力和团队合作精神。 </p>
+        <p>7、具有较强的分析理解客户需求，正确把握设计创意的能力，保证作品符合客户需求；</p>
+        <p>8、有UI设计者优先考虑 。</p>
       </div>
 
       <div class="he80"></div>
@@ -197,7 +202,7 @@
     </div>
 
     <div class=" recruit-two">
-      <p class="recruitList-title ">平面设计师
+      <p class="recruitList-title ">AE岗位JD
         <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
@@ -207,14 +212,20 @@
       </p>
       <div class="recruit-text">
         <h4>岗位职责</h4>
-        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
-        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
-        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
+        <p>1.灵活调整客户攻关策略，掌握娴熟销售技巧，完成销售利润最大化。</p>
+        <p>2.	定期收集整理市场动态，整合客户需求并及时汇报。</p>
+        <p>3.	根据合同及时有效回收应收账款。</p>
+        <p>4.	配合和完成上级交代其他工作。</p>
 
         <h4>任职要求</h4>
-        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
-        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
-        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+        <p>1.	本科及以上学历，市场营销、公关、商业、广告、经济等相关专业毕业；</p>
+        <p>2.	对教育、美妆、服装等领域有比较全面的了解，并独立服务过2个以上品牌； </p>
+        <p>3.	具备强烈的开拓客户的意识，具备独立的项目销售处理能力；</p>
+        <p>4.	有一定的技术基础，如：对大数据平台的挖掘分析、数字营销有一定认知；</p>
+        <p>5.	表达能力强，思路清晰，能接受较大的工作压力；</p>
+        <p>6.	具有高度的责任心和忠诚度、自律，应变能力强；</p>
+        <p>7.	热爱创意性工作，有较强的服务意识和组织协调能力；</p>
+        <p>8.	具备一定的英语表达能力。</p>
       </div>
 
       <div class="he80"></div>
@@ -224,7 +235,7 @@
     </div>
 
     <div class=" recruit-three">
-      <p class="recruitList-title">数据分析师
+      <p class="recruitList-title">文案策划岗位JD
         <span class="fr open">
           <img src="images/recruit/open.png" alt="">
         </span>
@@ -234,40 +245,19 @@
       </p>
       <div class="recruit-text">
         <h4>岗位职责</h4>
-        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
-        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
-        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
+        <p>1、负责客户及公司内部营销活动（包括新媒体）文案的创意和撰写； </p>
+        <p>2、负责营销活动（包括新媒体）的文案策划及编辑、发布工作； </p>
+        <p>3、负责营销活动（包括新媒体）的传播、互动及营销工作；</p>
+        <p>4、协助销售完成营销活动（包括新媒体）的销售及提案工作；</p>
+        <p>5、研究营销活动（包括新媒体）发展方向，分析相关数据，提出新的营销建议； </p>
+        <p>6、领导安排的其他工作。</p>
 
         <h4>任职要求</h4>
-        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
-        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
-        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
-      </div>
-
-      <div class="he80"></div>
-      <div class="btn">
-        <button>加入我们</button>
-      </div>
-    </div>
-    <div class="recruit-four">
-      <p class="recruitList-title ">新媒体运营
-        <span class="fr open">
-          <img src="images/recruit/open.png" alt="">
-        </span>
-        <span class="fr done">
-          <img src="images/recruit/done.png" alt="">
-        </span>
-      </p>
-      <div class="recruit-text">
-        <h4>岗位职责</h4>
-        <p>基于产品和业务目标，构建相应的数据模型并验证，指导模型落地；</p>
-        <p>2.监控产品运营各数据指标，对产品进行数据化运营；</p>
-        <p>3.与业务部门密切配合寻求数据层面的商业价值并组织建设相应的数据标签。</p>
-
-        <h4>任职要求</h4>
-        <p>1.熟悉 mySQL / MongoDB 等数据库；</p>
-        <p>2.熟悉 Linux 开发环境和 shell 脚本， 熟练使用 D3 或 Shiny； </p>
-        <p>3.有大数据分析经验，懂 Spark 者优先。</p>
+        <p>1、了解营销活动（包括新媒体：微信和移动互联网等），喜欢网络营销； </p>
+        <p>2、本科及以上学历，有一定的网络营销、微博营销、品牌营销或相关文案策划及撰写经验； </p>
+        <p>3、富有创造力、想象力，文笔优美； </p>
+        <p>4、具备数据营销、运营、品牌等系统的理论知识和丰富的实践经验者优先；</p>
+        <p>5、有不错的英文基础。</p>
       </div>
 
       <div class="he80"></div>
